# altair_recipes

./: .bumpversion.cfg  .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  Pipfile  README.rst  pyproject.toml  readthedocs.yml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini  travis_pypi_setup.py
.github/: ISSUE_TEMPLATE.md
altair_recipes/: __init__.py  areaplot.py  autocorrelation.py  autoplot.py  barchart.py  boxplot.py  common.py  converters.py  display_altair.py  docstrings.py  heatmap.py  histogram.py  lineplot.py  qqplot.py  scatter.py  scatterplot.py  signatures.py  smoother.py  stripplot.py
docs/: Makefile  altair_recipes.rst  autoplot.md  conf.py  examples.rst  index.rst  installation.rst  make.bat  modules.rst  signatures.md  test_areaplot.html  test_autocorrelation.html  test_barchart.html  test_boxplot.html  test_heatmap.html  test_histogram.html  test_lineplot.html  test_qqplot.html  test_scatter.html  test_scatterplot.html  test_smoother.html  test_stripplot.html  usage.rst
docs/blog-post/: 2019-02-11-a-python-package-to-generate-essential-statistical-graphics-for-the-web-in-one-line-altairrecipes.md  2019-02-11-a-python-package-to-generate-essential-statistical-graphics-for-the-web-in-one-line-altairrecipes.pmd
tests/: test_areaplot.py  test_autocorrelation.py  test_autoplot.py  test_barchart.py  test_boxplot.py  test_heatmap.py  test_histogram.py  test_lineplot.py  test_qqplot.py  test_scatter.py  test_scatterplot.py  test_smoother.py  test_stripplot.py  test_vega_stats.py
tests/_regtest_outputs/: test_areaplot.test_areaplot.out  test_autocorrelation.test_autocorrelation.out  test_autoplot.test_autoplot_1.out  test_autoplot.test_autoplot_10.out  test_autoplot.test_autoplot_11.out  test_autoplot.test_autoplot_12.out  test_autoplot.test_autoplot_13.out  test_autoplot.test_autoplot_14.out  test_autoplot.test_autoplot_15.out  test_autoplot.test_autoplot_16.out  test_autoplot.test_autoplot_17.out  test_autoplot.test_autoplot_18.out  test_autoplot.test_autoplot_19.out  test_autoplot.test_autoplot_2.out  test_autoplot.test_autoplot_20.out  test_autoplot.test_autoplot_21.out  test_autoplot.test_autoplot_22.out  test_autoplot.test_autoplot_23.out  test_autoplot.test_autoplot_24.out  test_autoplot.test_autoplot_25.out  test_autoplot.test_autoplot_26.out  test_autoplot.test_autoplot_27.out  test_autoplot.test_autoplot_28.out  test_autoplot.test_autoplot_29.out  test_autoplot.test_autoplot_3.out  test_autoplot.test_autoplot_30.out  test_autoplot.test_autoplot_31.out  test_autoplot.test_autoplot_32.out  (+46 more)
vega_stats/: __init__.py  autocorrelation.py  boxplot.py  histogram.py  qqplot.py  scatter.py  smoother.py
