[tool.poetry]
authors = ["Antonio Piccolboni <antonio@piccolboni.info>"]
description = "A collection of ready-made statistical graphics for vega"
documentation="https://altair_recipes.readthedocs.io/en/latest/"
license="GPL-3.0"
name = "altair_recipes"
readme = "README.rst"
repository="https://github.com/piccolbo/altair_recipes"
version = "0.9.2"
classifiers=[
      "Development Status :: 4 - Beta",
      "Intended Audience :: Developers",
  ]


[tool.poetry.dependencies]
altair = "^4.0.0"
attrs = "^19.2"
autosig = ">=0.10.0"
boltons = ">=19.1.0"
ipython = {version = "^7.16.3", optional = true}
numpy = ">=1.17.0"
pandas = ">=0.25.0"
python = "^3.8.0"
requests = ">=2.22.0"
toolz = ">=0.10.0"


[tool.poetry.extras]
pweave = ["ipython"]



[tool.poetry.dev-dependencies]
bump2version = "^0.5.11"
codecov = ">=2.0.15"
coverage = ">=4.5.1"
flake8 = ">=3.5.0"
hypothesis = "^4.39"
ipdb = "*"
pweave = {git = "https://github.com/piccolbo/Pweave.git"}
pytest = ">=3.4.2"
pytest-cov = ">=2.6.0"
pytest-regtest = ">=1.3.0"
pytest-runner = ">=2.11.1"
recommonmark = "*"
Sphinx = ">=1.7.1"
sphinx-rtd-theme = "*"
tox = ">=2.9.1"
twine = ">=1.10.0"
vega-datasets = ">=0.7.0"
watchdog = ">=0.8.3"
wheel = ">=0.30.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
